--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rockets vs Cars</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Rockets vs Cars</h1>
+  <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <script src="script.js"></script>
+</body>
+</html>
 
