--- a/index.html
+++ b/index.html
@@ -7,24 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Rockets vs Cars</h1>
-  <canvas id="gameCanvas" width="800" height="500"></canvas>
-  <script src="script.js"></script>
-</body>
-</html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rockets vs Cars</title>
-  <link rel="stylesheet" href="style.css"> <!-- link CSS -->
-</head>
-<body>
   <h1>Rockets vs Cars</h1>
-  <canvas id="gameCanvas" width="800" height="500"></canvas> <!-- game canvas -->
-  
-  <script src="script.js"></script> <!-- link JS -->
+  <p>Rocket Team: Move with A/D, Shoot with Space | Car Team: Arrow keys to move</p>
+  <canvas id="gameCanvas" width="800" height="500"></canvas>
+
+  <script src="script.js"></script>
 </body>
 </html>
