--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,7 +9,8 @@
 <body>
 
   <h1>Rockets vs Cars</h1>
-  <p>Rocket Team: Move with A/D, Shoot with Space | Car Team: Arrow keys to move</p>
+  <p>Rocket Team: Move with A/D, Shoot with Space | Cars move automatically</p>
+  <p id="score">Score: 0 | Rocket Health: 100</p>
   <canvas id="gameCanvas" width="800" height="500"></canvas>
 
   <script src="script.js"></script>
