--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,10 +8,14 @@
 </head>
 <body>
 
-  <h1>Rockets vs Cars</h1>
-  <p>Rocket Team: Move with A/D, Shoot with Space | Cars move automatically</p>
+  <div id="titleScreen">
+    <h1>Rockets vs Cars</h1>
+    <button id="startGame">Start Game</button>
+    <p>Move: A/D | Jump: W | Shoot: Arrow Keys + Space</p>
+  </div>
+
   <p id="score">Score: 0 | Rocket Health: 100</p>
-  <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <canvas id="gameCanvas" width="1000" height="600"></canvas>
 
   <script src="script.js"></script>
 </body>
