--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rockets vs Cars</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rockets vs Cars Pro</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div id="titleScreen">
-    <h1>Rockets vs Cars</h1>
-    <button id="startGame">Start Game</button>
-    <p>Move: A/D | Jump: W | Shoot: Arrow Keys + Space</p>
-  </div>
+<div id="titleScreen">
+  <h1>Rockets vs Cars</h1>
+  <button id="startGame">Start Game</button>
+  <p>Move: A/D | Jump: W | Shoot: Arrow Keys + Space</p>
+</div>
 
-  <p id="score">Score: 0 | Rocket Health: 100</p>
-  <canvas id="gameCanvas" width="1000" height="600"></canvas>
+<div id="hud">
+  <span id="score">Score: 0</span>
+  <span id="health">Player Health: 100</span>
+</div>
 
-  <script src="script.js"></script>
+<canvas id="gameCanvas" width="1000" height="600"></canvas>
+
+<script src="script.js"></script>
 </body>
 </html>
