--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rockets vs Cars Pro</title>
+<title>Rockets vs Cars Ultimate</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
   <span id="health">Player Health: 100</span>
 </div>
 
-<canvas id="gameCanvas" width="1000" height="600"></canvas>
+<canvas id="gameCanvas" width="1400" height="800"></canvas>
 
 <script src="script.js"></script>
 </body>
