--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 <div id="titleScreen">
   <h1>Rockets vs Cars</h1>
+  <div id="instructions">
+    <p><strong>Aim of the Game:</strong> Destroy all cars using your rocket launcher!</p>
+    <p><strong>Player:</strong> Move with A/D, Jump with W, Shoot with Arrow Keys + Space.</p>
+    <p><strong>NPC Allies:</strong> Help you by shooting cars automatically, but fire slower.</p>
+    <p><strong>Cars:</strong> Jump randomly and try to stay inside the arena. Avoid them!</p>
+    <p><strong>Win Condition:</strong> Destroy all cars to win. Lose if your health reaches 0.</p>
+  </div>
   <button id="startGame">Start Game</button>
-  <p>Move: A/D | Jump: W | Shoot: Arrow Keys + Space</p>
 </div>
 
 <div id="hud">
