--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 <body>
 
 <div id="titleScreen">
-  <h1>Rockets vs Cars</h1>
+  <h1>Rockets vs Cars Ultimate</h1>
   <div id="instructions">
-    <p><strong>Aim:</strong> Destroy all cars before they hit you or your NPC allies!</p>
-    <p><strong>Player Controls:</strong> Move: A/D | Shoot: Click toward cursor</p>
-    <p><strong>NPCs:</strong> Help shoot cars. There are 6 NPCs on the platform.</p>
-    <p><strong>Cars:</strong> Jump randomly and try to hit the NPCs!</p>
-    <p><strong>Lives:</strong> Player & NPCs have 3 lives each. Lose all lives → Game Over.</p>
+    <p><strong>Aim:</strong> Survive or destroy the cars before they take out you or your NPCs!</p>
+    <p><strong>Player Controls:</strong> Move: A/D | Jump: W | Shoot: Click toward cursor</p>
+    <p><strong>NPCs:</strong> Start with 1 NPC. Buy more in the shop with points earned from destroying cars.</p>
+    <p><strong>Cars:</strong> Move randomly and jump to hit the NPCs or player.</p>
     <div id="diagram">
       <div class="player">Cube = Player</div>
       <div class="car">Rectangle = Car</div>
       <div class="npc">Small Cube = NPC</div>
     </div>
+  </div>
+  <div id="shop">
+    <p>Points: <span id="shopPoints">0</span></p>
+    <button id="buyNPC">Buy NPC (100 points)</button>
   </div>
   <button id="startGame">Start Game</button>
 </div>
@@ -28,6 +31,8 @@
 <div id="hud">
   <span id="score">Score: 0</span>
   <span id="lives">Player Lives: 3</span>
+  <span id="wave">Wave: 1</span>
+  <span id="timer">Time: 60</span>
 </div>
 
 <canvas id="gameCanvas" width="1600" height="800"></canvas>
