--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Rockets vs Cars — Floating Island</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rockets vs Cars Ultimate</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- Title Screen -->
 <div id="titleScreen">
-  <h1>Rockets vs Cars — Floating Island</h1>
-
+  <h1>🚀 Rockets vs Cars Ultimate 🚗</h1>
+  
   <div id="instructions">
-    <p><strong>Aim:</strong> Survive or destroy the cars. Protect your NPC allies on the floating island!</p>
-    <p><strong>Controls:</strong> Move: A / D — Jump: W — Shoot: Click toward the cursor</p>
-    <p><strong>NPCs:</strong> Start with 1. Buy more in the shop (100 points each). NPCs wander the island and have 3 lives each.</p>
-    <p><strong>Cars:</strong> Roam and jump up to the island to smash NPCs or the player. They have jump cooldowns.</p>
+    <p><strong>Aim:</strong> Survive or destroy the cars before they take out you or your NPCs!</p>
+    <p><strong>Player Controls:</strong> Move: A/D | Jump: W | Shoot: Click toward cursor</p>
+    <p><strong>NPCs:</strong> Start with 1 NPC. Buy more in the shop with points earned from destroying cars.</p>
+    <p><strong>Cars:</strong> Move randomly and jump to hit the NPCs or player.</p>
+  </div>
 
-    <div id="diagram">
-      <div class="player">Cube = Player</div>
-      <div class="car">Rectangle = Car</div>
-      <div class="npc">Small Cube = NPC</div>
-    </div>
+  <div id="diagram">
+    <div class="player">Cube = Player</div>
+    <div class="car">Rectangle = Car</div>
+    <div class="npc">Small Cube = NPC</div>
   </div>
 
   <div id="shop">
     <p>Points: <span id="shopPoints">0</span></p>
-    <button id="buyNPC">Buy NPC (+1) — 100 points</button>
-    <p style="margin-top:8px;color:#ddd">Owned NPCs: <span id="ownedNPCs">1</span></p>
+    <button id="buyNPC">Buy NPC (100 points)</button>
   </div>
 
-  <div style="margin-top:18px">
-    <button id="startGame">Start Game</button>
-  </div>
+  <button id="startGame">Start Game</button>
 </div>
 
+<!-- HUD -->
 <div id="hud">
   <span id="score">Score: 0</span>
   <span id="lives">Player Lives: 3</span>
@@ -42,7 +41,8 @@
   <span id="timer">Time: 60</span>
 </div>
 
-<canvas id="gameCanvas" width="1600" height="900"></canvas>
+<!-- Game Canvas -->
+<canvas id="gameCanvas" width="1600" height="800"></canvas>
 
 <script src="script.js"></script>
 </body>
