--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </div>
 
   <div id="diagram">
-    <div class="player">Cube = Player</div>
-    <div class="car">Rectangle = Car</div>
-    <div class="npc">Small Cube = NPC</div>
+    <img src="images/player.png" alt="Player" class="diagramSprite">
+    <img src="images/car.png" alt="Car" class="diagramSprite">
+    <img src="images/npc.png" alt="NPC" class="diagramSprite">
   </div>
 
   <div id="shop">
